# ChangeLog for net-p2p/qtella
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/qtella/ChangeLog,v 1.15 2004/04/28 17:45:43 squinky86 Exp $

*qtella-0.6.4 (28 Apr 2004)

  28 Apr 2004; Jon Hood <squinky86@gentoo.org> qtella-0.6.4.ebuild:
  version bump (#22817)

  20 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org>
  qtella-0.5.3-r2.ebuild, qtella-0.5.4.ebuild:
  Added IUSE.

  06 Dec 2003; Martin Holzer <mholzer@gentoo.org> qtella-0.5.3-r2.ebuild,
  qtella-0.5.4.ebuild, qtella-0.6.1.ebuild, qtella-0.6.2.ebuild:
  adding RESTRICT="nomirror"

*qtella-0.6.2 (30 Jul 2003) 

  30 Jul 2003; Caleb Tennis <caleb@gentoo.org>:
  Version bump.

*qtella-0.6.1 (25 Feb 2003) 

  25 Feb 2003; Dan Armak <danarmak@gentoo.org>:

  New version; fix bug #12197. Added a patch to fix a compile problem when
  kde support is disabled; however do not click on 'check' in the menu as it
  does strang things... I wouldn't commit this normally, but it's still a lot
  better than the previous ebuilds, so it's on the way to fixing everything.

*qtella-0.5.4 (8 Dec 2002) 

Bart Verwilst <verwilst@gentoo.org>
  New version

*qtella-0.5.3-r2 (23 Aug 2002)

  23 Aug 2002; Dan Armak <danarmak@gentoo.org> ChangeLog  :

  Behave correctly wrt. eclasses; fix behaviour when USE kde is off (bug
  #6296).

  28 Jul 2002; Dan Armak <danarmak@gentoo.org> ChangeLog  :

  Use correct SLOT='3'.

*qtella-0.5.3-r1 (5 July 2002) Bart Verwilst <verwilst@gentoo.org>

  Made sure that it builds as QT-only when -kde in USE. (fixes #2799)

*qtella-0.5.3 (25 June 2002) Bart Verwilst <verwilst@gentoo.org>

  26 Jun 2002; Thilo Bangert <bangert@gentoo.org> :

  moved to net-p2p

*qtella-0.5.2 (1 May 2002)

  1 May 2002; Bart Verwilst <verwilst@gentoo.org> ChangeLog :

  Upgraded to 0.5.2.. This time this is more a bugfix release.. Enjoy!

*qtella-0.5.1 (1 April 2002)

  1 April 2002; Bart Verwilst <verwilst@gentoo.org> ChangeLog :
