@@ -1,13 +1,9 @@
-MD5 8a35bf9296c22960d6b5f0622e65d942 qtella-0.6.2.ebuild 703
-MD5 7ea6a7d9d54f3f44c101a5b14806fd16 qtella-0.6.4.ebuild 644
-MD5 a008dd4f36f10bf5e75cc1b35f6d6bd1 qtella-0.6.1.ebuild 702
-MD5 6ce5f3d907dc13579a8e44f06e7d6af1 qtella-0.5.3-r2.ebuild 881
-MD5 a33ddbe310bb483656969bde839fb7ff ChangeLog 2773
+MD5 33f60c749b351e260991224faa4eee37 qtella-0.7.0.ebuild 741
+MD5 1a96d648ada18cd69ef0b6b0e4eb43c7 qtella-0.6.4.ebuild 647
+MD5 92c06b1fa4a7ac4ec033d15aa4431b8e qtella-0.5.3-r2.ebuild 880
+MD5 15d381ca1300f0a8aeb3f2060a8d332e ChangeLog 2995
 MD5 8aefbc0e49db723ca1ad02d0c409cd49 metadata.xml 160
-MD5 900373f7d65f92b30a205cb1e292aa3c qtella-0.5.4.ebuild 879
-MD5 0dc754116e9199631f34f70563f2c20f files/digest-qtella-0.5.4 64
-MD5 3af75c40652ea5cd9a7a79f4e14a8c21 files/digest-qtella-0.6.1 64
-MD5 86d1050b80f9374e1af0f3636d6b9020 files/digest-qtella-0.6.2 64
 MD5 1a26818529b8ff279331f5015cba38df files/digest-qtella-0.6.4 64
+MD5 ce9afdcf9321154c1866cfb82d47fa0b files/digest-qtella-0.7.0 64
 MD5 10498ea48fb6500d9dc739862a260ac5 files/digest-qtella-0.5.3-r2 64
 MD5 2dc37ee576745d4f0436756a030e76f6 files/qtella-0.6.1-nokde.diff 371
