@@ -1,1 +1,0 @@
-MD5 6971c6c27d31537f2c38f3702c9c545e qtella-0.5.4.tar.gz 438860
