@@ -1,1 +1,0 @@
-MD5 ca2a4a75e28c55b0cb99722c8359bc22 qtella-0.6.1.tar.gz 489168
