@@ -1,1 +1,0 @@
-MD5 49e8ea44f090f7939f6c7a5fb3afa09f qtella-0.6.2.tar.gz 492187
