@@ -1,0 +1,1 @@
+MD5 43f59fcf6366db64f8b6b3fc3d6b0fa3 qtella-0.7.0.tar.gz 672916
