@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/qtella/qtella-0.6.1.ebuild,v 1.7 2004/03/01 06:26:59 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/qtella/qtella-0.7.0.ebuild,v 1.1 2004/06/20 01:16:33 squinky86 Exp $
 
 inherit kde-base
 
@@ -14,11 +14,9 @@ DESCRIPTION="Excellent QT/KDE Gnutella Client"
 
 SLOT="3" # why??
 LICENSE="GPL-2"
-KEYWORDS="x86"
+#masking by keywords as there are known bugs and I don't want to put up with the reports yet
+KEYWORDS="~x86 ~ppc"
 export MAKEOPTS="$MAKEOPTS -j1"
-
-# weird workaround
-PATCHES="${FILESDIR}/${P}-nokde.diff"
 
 src_compile() {
 	kde_src_compile myconf
