@@ -1,6 +1,13 @@
 # ChangeLog for net-p2p/qtella
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/qtella/ChangeLog,v 1.15 2004/04/28 17:45:43 squinky86 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/qtella/ChangeLog,v 1.16 2004/06/20 01:16:33 squinky86 Exp $
+
+*qtella-0.7.0 (18 Jun 2004)
+
+  18 Jun 2004; Jon Hood <squinky86@gentoo.org> -qtella-0.5.4.ebuild,
+  -qtella-0.6.1.ebuild, -qtella-0.6.2.ebuild, qtella-0.6.4.ebuild,
+  +qtella-0.7.0.ebuild:
+  ebuild cleanups, version bumps
 
 *qtella-0.6.4 (28 Apr 2004)
 
